--- a/Areas/Bill/Views/Bill/BillList.cshtml
+++ b/Areas/Bill/Views/Bill/BillList.cshtml
@@ -31,10 +31,10 @@
 						<tr>
 							<th scope="col">Amount</th>
 							<th scope="col">Status</th>
-							<th scope="col">Customer Name</th>
-							<th scope="col">Country Name</th>
+							<th scope="col">Customer ID</th>
+						@* 	<th scope="col">Country Name</th>
 							<th scope="col">State Name</th>
-							<th scope="col">City Name</th>
+							<th scope="col">City Name</th> *@
 							<th scope="col">Creation Date</th>
 							<th scope="col">Modification Date</th>
 							<th scope="col" class="text-center" colspan="2">Action</th>
@@ -45,10 +45,10 @@
 							<tr>
 								<td>@dr["BillAmount"]</td>
 								<td>@dr["BillStatus"]</td>
-								<td>@dr["CustomerName"]</td>
-								<td>@dr["CountryName"]</td>
+								<td>@dr["CustomerID"]</td>
+								@* <td>@dr["CountryName"]</td>
 								<td>@dr["StateName"]</td>
-								<td>@dr["CityName"]</td>
+								<td>@dr["CityName"]</td> *@
 								<td>@Convert.ToDateTime(dr["CreationDate"]).ToString("dd-MM-yyyy")</td>
 								<td>@Convert.ToDateTime(dr["ModificationDate"]).ToString("dd-MM-yyyy")</td>
 								<td>
