--- a/Areas/Country/Views/Country/CountryAddEdit.cshtml
+++ b/Areas/Country/Views/Country/CountryAddEdit.cshtml
@@ -20,11 +20,13 @@
                         <h5 class="mt-2">Name</h5>
                         <fieldset class="form-group">
                             <input type="text" class="form-control" id="placeholderInput" placeholder="Enter Name" asp-for="CountryName">
+                            <span asp-validation-for="CountryName" class="text-danger"></span>
                         </fieldset>
 
                         <h5 class="mt-2">Country Code</h5>
                         <fieldset class="form-group">
                             <input type="text" class="form-control" id="placeholderInput" placeholder="Enter Country Code" asp-for="CountryCode">
+                            <span asp-validation-for="CountryCode" class="text-danger"></span>
                         </fieldset>
                     </div>
                 </div>
@@ -42,3 +44,8 @@
     </div>
 </form>
 
+@section Scripts{
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
